jitsi/base/jitsi/jitsi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jitsi
  labels:
    k8s-app: jitsi
  name: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: jitsi
  template:
    metadata:
      labels:
        k8s-app: jitsi
    spec:
      volumes:
        - name: web
          configMap:
            name: web
            items:
              - key: welcomePageAdditionalContent.html
                path: welcomePageAdditionalContent.html
              - key: plugin.head.html
                path: plugin.head.html
              - key: config.js
                path: config.js
              - key: interface_config.js
                path: interface_config.js
      containers:
        - name: jicofo
          image: jitsi/jicofo
          imagePullPolicy: Always
        - name: prosody
          image: jitsi/prosody
          imagePullPolicy: Always
        - name: web
          image: jitsi/web
          imagePullPolicy: Always
          volumeMounts:
          - name: web
            mountPath: /usr/share/jitsi-meet/static/welcomePageAdditionalContent.html
            subPath: welcomePageAdditionalContent.html
          - name: web
            mountPath: /usr/share/jitsi-meet/plugin.head.html
            subPath: plugin.head.html
          - name: web-config
            mountPath: /defaults/config.js
            subPath: config.js
          - name: web-interface-config
            mountPath: /defaults/interface_config.js
            subPath: interface_config.js
