jitsi/base/jitsi/jvb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: jitsi
  labels:
    k8s-app: jvb
  name: jvb
  annotations:
    service-per-pod-label: "statefulset.kubernetes.io/pod-name"
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: jvb
  serviceName: jvb
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        k8s-app: jvb
    spec:
      volumes:
        - name: jvb-entrypoint
          configMap:
            name: jvb-entrypoint
            defaultMode: 0744
        - name: jvb-shutdown
          configMap:
            name: jvb-shutdown
            defaultMode: 0744
      terminationGracePeriodSeconds: 2147483647
      containers:
        - name: prometheus-exporter
          image: systemli/prometheus-jitsi-meet-exporter
          imagePullPolicy: Always
          ports:
            - name: metrics
              containerPort: 9888
          args:
            - "-videobridge-url"
            - "http://localhost:8080/colibri/stats"
        - name: jvb
          image: jitsi/jvb
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command: ["bash", "/shutdown/graceful_shutdown.sh", "-t 3"]
          command:
            - /entrypoint/entrypoint.sh
          args:
            - "30300"
            - "/init"
          volumeMounts:
            - name: jvb-entrypoint
              mountPath: /entrypoint
            - name: jvb-shutdown
              mountPath: /shutdown
  volumeClaimTemplates:
    - metadata:
        name: jvb
      spec: 
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: ionos-enterprise-hdd
        resources:
          requests:
            storage: 1Gi
