jitsi/base/jitsi/jitsi-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jitsi-ingress
  namespace: jitsi
spec:
  tls:
  - hosts:
    # Fill in host here:
    - jitsi.domainname
    secretName: jitsi-messenger-schule-tls
